--- a/Pict/local.properties
+++ b/Pict/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 10 19:31:06 ICT 2020
-sdk.dir=E\:\\APLIKASI MATKUL\\Andro SDK\\Sdk
+#Tue Nov 17 21:47:37 ICT 2020
+sdk.dir=C\:\\Users\\Asus\\AppData\\Local\\Android\\Sdk
